[gd_scene load_steps=7 format=3 uid="uid://dxxdne2fb5gy1"]

[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_0hw4o"]
[ext_resource type="Texture2D" uid="uid://c3pr3hl0cdngp" path="res://assets/player/parrot.png" id="1_4m6gm"]
[ext_resource type="Texture2D" uid="uid://dgs8xxcb62nxf" path="res://assets/items/arrow.png" id="3_ruc7d"]
[ext_resource type="AudioStream" uid="uid://d2tauq7esd7mi" path="res://assets/audio/stretch2.ogg" id="4_bbyvv"]
[ext_resource type="AudioStream" uid="uid://86umnqeaovo2" path="res://assets/audio/catapult.ogg" id="5_14w18"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5caj5"]
radius = 20.0

[node name="Animal" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("1_0hw4o")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_4m6gm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5caj5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -4.76837e-07)
scale = Vector2(2.15, 2.1)

[node name="DebugLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -63.0
offset_right = 25.0
offset_bottom = -40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Debug"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_ruc7d")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bbyvv")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_14w18")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
